--- a/projects/Exoplanet-detection.html
+++ b/projects/Exoplanet-detection.html
@@ -24,87 +24,14 @@
     
     <section class="section">
       <h3>Notebook: Exoplanet detection</h3>
-      <div id="notebook-container" class="card" style="min-height:200px;">Cargando notebook...</div>
-      <p class="muted" style="margin-top:.5rem">Nota: para que el notebook se cargue correctamente, sirve el sitio por HTTP (GitHub Pages o un servidor local). Si abres los archivos con `file://` la carga puede fallar.</p>
+      <div class="card" style="padding:0;overflow:hidden;">
+        <iframe src="../files/Exoplanet-detection.html" style="width:100%;height:900px;border:0;" title="Notebook Exoplanet detection"></iframe>
+      </div>
+      <p class="muted" style="margin-top:.5rem">Si prefieres abrir el notebook en una nueva pestaña: <a href="../files/Exoplanet-detection.html" target="_blank" rel="noopener">Abrir notebook HTML</a></p>
     </section>
   </main>
   <footer class="site-footer"><div class="container"><p>&copy; 2025 Diego Madruga</p></div></footer>
-  <!-- notebookjs: renderiza notebooks .ipynb en el navegador -->
-  <script src="https://unpkg.com/notebookjs@1.4.3/dist/notebook.min.js"></script>
-  <script>
-    (async function(){
-      const container = document.getElementById('notebook-container');
-      const NB = window.notebookjs && (window.notebookjs.Notebook || window.notebookjs.notebook || window.notebookjs);
-      // Si la librería notebookjs no está disponible (CDN bloqueado), intentamos un fallback
-      if(!NB){
-        // Intentar mostrar el notebook mediante nbviewer (iframe) como fallback fiable en Pages
-        const nbviewerUrl = 'https://nbviewer.org/github/zmadru/diegomadruga.github.io/blob/main/files/Shallue_compactoWL.ipynb';
-        container.innerHTML = '';
-        const info = document.createElement('p');
-        info.className = 'muted';
-        info.textContent = 'La librería de visualización (notebookjs) no está disponible. Usando un visor externo (nbviewer) como alternativa.';
-        container.appendChild(info);
-        const iframe = document.createElement('iframe');
-        iframe.src = nbviewerUrl;
-        iframe.style.width = '100%';
-        iframe.style.height = '800px';
-        iframe.style.border = '0';
-        iframe.title = 'Notebook viewer (nbviewer)';
-        container.appendChild(iframe);
-        const link = document.createElement('p');
-        link.className = 'muted';
-        link.innerHTML = 'Si el visor no carga, abre el notebook directamente en <a href="' + nbviewerUrl + '" target="_blank">nbviewer</a>.';
-        container.appendChild(link);
-        return;
-      }
-
-      // Fuentes a probar: inline JSON (si existe), ruta relativa en el repo, y raw.githubusercontent como fallback
-      const rawUrl = 'https://raw.githubusercontent.com/zmadru/diegomadruga.github.io/main/files/Shallue_compactoWL.ipynb';
-      const sources = [
-        {type:'inline', elId:'notebook-json'},
-        {type:'relative', url:'../files/Shallue_compactoWL.ipynb'},
-        {type:'raw', url: rawUrl}
-      ];
-
-      let nb = null;
-      let lastErr = null;
-      for(const s of sources){
-        try{
-          if(s.type === 'inline'){
-            const el = document.getElementById(s.elId);
-            if(el && el.textContent.trim()){
-              nb = JSON.parse(el.textContent);
-              break;
-            }
-            continue;
-          }
-          const res = await fetch(s.url, {cache: 'no-cache'});
-          if(!res.ok) throw new Error('HTTP ' + res.status + ' al cargar ' + s.url);
-          nb = await res.json();
-          break;
-        }catch(e){
-          lastErr = e;
-          console.warn('No se pudo cargar notebook desde', s, e);
-        }
-      }
-
-      if(!nb){
-        container.innerHTML = '<pre style="color:#f88">No se pudo cargar el notebook. Último error:\n' + String(lastErr) + '\n\nComprueba consola de red/errores y que `files/Shallue_compactoWL.ipynb` esté en la rama `main`.</pre>';
-        return;
-      }
-
-      try{
-        const viewer = new NB(nb);
-        if(typeof viewer.render === 'function') viewer.render();
-        const el = viewer.el || viewer.element || viewer.node || viewer;
-        container.innerHTML = '';
-        if(el && el.nodeType) container.appendChild(el);
-        else container.appendChild(document.createTextNode('Notebook cargado (pero no se pudo renderizar automáticamente).'));
-      }catch(err){
-        container.innerHTML = '<pre style="color:#f88">Error al renderizar el notebook:\n' + String(err) + '</pre>';
-      }
-    })();
-  </script>
+  
   <script src="../js/main.js"></script>
 </body>
 </html>
