cambios proyecto tfm

--- a/projects/Exoplanet-detection.html
+++ b/projects/Exoplanet-detection.html
@@ -11,15 +11,18 @@
   <header class="site-header"><div class="container"><h1 class="brand">Proyecto de ejemplo</h1><nav class="main-nav"><a href="../index.html">Inicio</a><a href="index.html">Proyectos</a></nav></div></header>
   <main class="container">
     <h2>Proyecto de ejemplo</h2>
-    <p>Este proyecto es una plantilla de ejemplo para tu portfolio. Incluye una breve descripción, tecnologías usadas y enlaces.</p>
+    <p>Este proyecto es un sistema de detección de exoplanetas utilizando redes neuronales convolucionales y transformadas wavelet. Desarrollado en Python con PyTorch para mi trabajo fin de master en astrofísica.</p>
     <br><h3>Tecnologías</h3>
     <ul>
       <li>Python</li>
       <li>PyTorch</li>
-      <li>Wavelet Transforms</li>
+      <li>Redes Neuronales Convolucionales</li>
+      <li>Transformadas Wavelet</li>
+      <li>Astrofísica</li>
+      <li>Exoplanetas</li>
     </ul>
     <br>
-    <h3>Enlace</h3>
+    <h3>Enlace al proyecto completo</h3>
     <p><a href="https://github.com/zmadru/ExoPlanet-Detection">https://github.com/zmadru/ExoPlanet-Detection</a></p>
     
     <section class="section">
