--- a/about.html
+++ b/about.html
@@ -8,24 +8,47 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="site-header"><div class="container"><h1 class="brand">Sobre mí</h1><nav class="main-nav"><a href="index.html">Inicio</a><a href="projects/index.html">Proyectos</a><a href="contact.html">Contacto</a></nav></div></header>
+  <header class="site-header">
+    <div class="container" style="display:flex;align-items:center;gap:12px">
+      <div class="avatar"><img src="images/foto_perfil.jpg" alt="Foto de Diego"></div>
+      <h1 class="brand">Sobre mí</h1>
+    </div>
+    <nav class="main-nav">
+      <a href="index.html">Inicio</a>
+      <a href="projects/index.html">Proyectos</a>
+      <a href="contact.html">Contacto</a>
+    </nav>
+  </header>
   <main class="container">
-    <h2>Sobre mí</h2>
-    <p>Soy ingeniero informático e investigador especializado en el desarrollo de algoritmos y modelos de inteligencia artificial aplicados al análisis de series temporales, imágenes satelitales y datos científicos. Mi trabajo combina la tecnología de teledetección con el aprendizaje profundo, explorando técnicas avanzadas de procesamiento de señal como las transformaciones wavelet y su integración en redes neuronales convolucionales (CNNs).
+    <div style="display:grid;grid-template-columns:260px 1fr;gap:1.25rem;align-items:start">
+      <aside class="card" style="padding:1rem">
+        <div style="text-align:center">
+          <div style="width:140px;height:140px;margin:0 auto;border-radius:999px;overflow:hidden;border:3px solid rgba(255,255,255,0.06)">
+            <img src="images/foto_perfil.jpg" alt="Diego" style="width:100%;height:100%;object-fit:cover;display:block">
+          </div>
+          <h4 style="margin-top:0.75rem">Diego Madruga Ramos</h4>
+          <p class="muted">Ingeniero informático · Máster en Astrofísica</p>
+      
+        </div>
+        <br>
+        <h3>Habilidades</h3>
+            <ul>
+                <li>Python</li>
+                <li>Java, Google Earth Engine</li>
+                <li>Inteligencia Artificial, Machine Learning</li>
+                <li>Procesamiento de señales e imágenes</li>
+            </ul>
+      </aside>
+      <div>
+        <h2>Sobre mí</h2>
+        <p>Soy ingeniero informático e investigador especializado en el desarrollo de algoritmos y modelos de inteligencia artificial aplicados al análisis de series temporales, imágenes satelitales y datos científicos. Mi trabajo combina la tecnología de teledetección con el aprendizaje profundo, explorando técnicas avanzadas de procesamiento de señal como las transformaciones wavelet y su integración en redes neuronales convolucionales (CNNs).</p>
 
-A lo largo de mi trayectoria he participado en proyectos de investigación centrados en la automatización del análisis de datos astronómicos y geoespaciales, desarrollando soluciones capaces de optimizar la detección y caracterización de fenómenos naturales y astrofísicos.
-He trabajado en la implementación y optimización de modelos predictivos, la gestión de bases de datos científicas y el procesamiento eficiente de grandes volúmenes de información, empleando herramientas como Python, PyTorch, Scikit-learn, GDAL, Google Earth Engine y SQL.
+        <p>A lo largo de mi trayectoria he participado en proyectos de investigación centrados en la automatización del análisis de datos astronómicos y geoespaciales, desarrollando soluciones capaces de optimizar la detección y caracterización de fenómenos naturales y astrofísicos. He trabajado en la implementación y optimización de modelos predictivos, la gestión de bases de datos científicas y el procesamiento eficiente de grandes volúmenes de información, empleando herramientas como Python, PyTorch, Scikit-learn, GDAL, Google Earth Engine y SQL.</p>
 
-Mi objetivo profesional es continuar aplicando la inteligencia artificial y el análisis de datos al estudio de sistemas complejos, impulsando la innovación en el campo científico y tecnológico mediante soluciones precisas, reproducibles y de alto impacto.</p>
+        <p>Mi objetivo profesional es continuar aplicando la inteligencia artificial y el análisis de datos al estudio de sistemas complejos, impulsando la innovación en el campo científico y tecnológico mediante soluciones precisas, reproducibles y de alto impacto.</p>
 
-<br>
-<h3>Habilidades</h3>
-    <ul>
-      <li>Python</li>
-      <li>Java, Google Earth Engine</li>
-      <li>Inteligencia Artificial, Machine Learning</li>
-      <li>Procesamiento de señales e imágenes</li>
-    </ul>
+      </div>
+    </div>
   </main>
   <footer class="site-footer"><div class="container"><p>&copy; 2025 Diego Madruga</p></div></footer>
   <script src="/js/main.js"></script>
