--- a/about.html
+++ b/about.html
@@ -9,8 +9,7 @@
 </head>
 <body>
   <header class="site-header">
-    <div class="container" style="display:flex;align-items:center;gap:12px">
-      <div class="avatar"><img src="images/foto_perfil.jpg" alt="Foto de Diego"></div>
+    <div class="container">
       <h1 class="brand">Sobre mí</h1>
     </div>
     <nav class="main-nav">
