Barras de navegacion nuevas

--- a/about.html
+++ b/about.html
@@ -11,12 +11,13 @@
   <header class="site-header">
     <div class="container">
       <h1 class="brand">Sobre mí</h1>
+      <nav class="main-nav">
+          <a href="index.html">Inicio</a>
+          <a href="about.html">Sobre mí</a>
+          <a href="projects/index.html">Proyectos</a>
+          <a href="contact.html">Contacto</a>
+        </nav>
     </div>
-    <nav class="main-nav">
-      <a href="index.html">Inicio</a>
-      <a href="projects/index.html">Proyectos</a>
-      <a href="contact.html">Contacto</a>
-    </nav>
   </header>
   <main class="container">
     <div style="display:grid;grid-template-columns:260px 1fr;gap:1.25rem;align-items:start">
@@ -50,6 +51,6 @@
     </div>
   </main>
   <footer class="site-footer"><div class="container"><p>&copy; 2025 Diego Madruga</p></div></footer>
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
