--- a/projects/Exoplanet-detection.html
+++ b/projects/Exoplanet-detection.html
@@ -3,14 +3,24 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Proyecto de ejemplo — Diego Madruga</title>
+  <title>Detección de Exoplanetas — Diego Madruga</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-  <header class="site-header"><div class="container"><h1 class="brand">Proyecto de ejemplo</h1><nav class="main-nav"><a href="../index.html">Inicio</a><a href="index.html">Proyectos</a></nav></div></header>
+  <header class="site-header">
+    <div class="container">
+      <h1 class="brand">Detección de Exoplanetas</h1>
+      <nav class="main-nav">
+        <a href="../index.html">Inicio</a>
+        <a href="../about.html">Sobre mí</a>
+        <a href="index.html">Proyectos</a>
+        <a href="../contact.html">Contacto</a>
+      </nav>
+    </div>
+  </header>
   <main class="container">
-    <h2>Proyecto de ejemplo</h2>
+    <h2>Detección de Exoplanetas</h2>
     <p>Este proyecto es un sistema de detección de exoplanetas utilizando redes neuronales convolucionales y transformadas wavelet. Desarrollado en Python con PyTorch para mi trabajo fin de master en astrofísica.</p>
     <br><h3>Tecnologías</h3>
     <ul>
