--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <header class="site-header"><div class="container"><h1 class="brand">Contacto</h1><nav class="main-nav"><a href="index.html">Inicio</a><a href="about.html">Sobre mí</a><a href="projects/index.html">Proyectos</a></nav></div></header>
+  <header class="site-header">
+    <div class="container">
+      <h1 class="brand">Contacto</h1>
+      <nav class="main-nav">
+        <a href="index.html">Inicio</a>
+        <a href="about.html">Sobre mí</a>
+        <a href="projects/index.html">Proyectos</a>
+        <a href="contact.html">Contacto</a>
+      </nav>
+    </div>
+  </header>
   <main class="container">
     <h2>Contacto</h2>
     <p>Enlaza aquí tu email o redes profesionales.</p>
@@ -18,6 +28,6 @@
     </ul>
   </main>
   <footer class="site-footer"><div class="container"><p>&copy; 2025 Diego Madruga</p></div></footer>
-  <script src="/js/main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 </html>
