nuevo proyecto añadido

--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,9 @@
     <h2>Contacto</h2>
     <p>Enlaza aquí tu email o redes profesionales.</p>
     <ul>
-        <li>Email: <a href="mailto:tu-email@example.com">tu-email@example.com</a></li>
+        <li>Email: <a href="mailto:madru4042@gmail.com">madru4042@gmail.com</a></li>
         <li>GitHub: <a href="https://github.com/zmadru">github.com/zmadru</a></li>
+        <li>LinkedIn: <a href="https://www.linkedin.com/in/diegomadrugaramos/">linkedin.com/in/diegomadrugaramos</a></li>
     </ul>
   </main>
   <footer class="site-footer"><div class="container"><p>&copy; 2025 Diego Madruga</p></div></footer>
