--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
       <div class="grid">
         <article class="card">
           <h4>Detección de exoplanetas</h4>
-          <p>Una pequeña demo que muestra estructura de proyecto y despliegue.</p>
+          <p>Investigación en técnicas de aprendizaje profundo para identificar exoplanetas a partir de datos astronómicos.</p>
           <p><a href="projects/Exoplanet-detection.html">Ver más</a></p>
         </article>
 
         <article class="card">
-          <h4>Proyecto 2</h4>
-          <p>Descripción corta del proyecto 2.</p>
-          <p><a href="projects/index.html">Ver proyectos</a></p>
+          <h4>Algoritmo de detección de dinámicas del suelo (CCT)</h4>
+          <p>Algoritmo basado en técnicas avanzadas para detectar cambios y dinámicas en la superficie terrestre utilizando datos satelitales.</p>
+          <p ><a href="projects/CCT.html">Ver más</a></p>
         </article>
       </div>
     </section>
