--- a/projects/index.html
+++ b/projects/index.html
@@ -28,8 +28,8 @@
       </article>
 
       <article class="card">
-        <h3>Proyecto 2</h3>
-        <p>Descripción breve del proyecto 2.</p>
+        <h3><a href="CCT.html">Algoritmo de detección de dinámicas del suelo (CCT)</a></h3>
+        <p>Algoritmo basado en técnicas avanzadas para detectar cambios y dinámicas en la superficie terrestre utilizando datos satelitales.</p>
       </article>
     </div>
   </main>
