--- a/about.html
+++ b/about.html
@@ -38,6 +38,17 @@
                 <li>Inteligencia Artificial, Machine Learning</li>
                 <li>Procesamiento de señales e imágenes</li>
             </ul>
+        <div style="margin-top:1rem;text-align:center">
+          <h4 style="margin-bottom:0.5rem">Instituciones</h4>
+          <div style="display:flex;gap:0.6rem;justify-content:center;align-items:center">
+            <a href="https://www.upm.es" target="_blank" rel="noopener" aria-label="UPM">
+              <img src="images/LOGOTIPO_leyenda_color_PNG.png" alt="UPM" style="height:48px;object-fit:contain">
+            </a>
+            <a href="https://www.unir.net" target="_blank" rel="noopener" aria-label="UNIR">
+              <img src="images/Logo_UNIR.png" alt="UNIR" style="height:48px;object-fit:contain">
+            </a>
+          </div>
+        </div>
       </aside>
       <div>
         <h2>Sobre mí</h2>
