--- a/projects/Exoplanet-detection.html
+++ b/projects/Exoplanet-detection.html
@@ -22,6 +22,7 @@
   <main class="container">
     <h2>Detección de Exoplanetas</h2>
     <p>Este proyecto es un sistema de detección de exoplanetas utilizando redes neuronales convolucionales y transformadas wavelet. Desarrollado en Python con PyTorch para mi trabajo fin de master en astrofísica.</p>
+    <br><img src="../images/exoplanet/transito.png" alt="Esquema de tránsito de exoplaneta" style="width:50%;border-radius:8px;justify-content:center;display:block;margin-left:auto;margin-right:auto;">
     <br><h3>Tecnologías</h3>
     <ul>
       <li>Python</li>
@@ -34,6 +35,18 @@
     <br>
     <h3>Enlace al proyecto completo</h3>
     <p><a href="https://github.com/zmadru/ExoPlanet-Detection">https://github.com/zmadru/ExoPlanet-Detection</a></p>
+    <br>
+    <p><strong>Descarga del TFM:</strong> <a href="../docs/TFM_DiegoMadruga.pdf" target="_blank" rel="noopener">Descargar TFM (PDF)</a></p>
+    
+    <section class="section">
+      <br><h3>Arquitecturas diseñadas</h3>
+      <p>Para más detalles, consulta el notebook interactivo a continuación, visita el proyecto en GitHub o descarga el TFM completo.</p>
+      <br><div class="grid">
+        <article class="card"><p>Arquitectura original de Shallue et al. 2018</p><br><img src="../images/exoplanet/shallue_original.png" alt="Arquitectura del modelo" style="width:100%;border-radius:8px"></article>
+        <article class="card"><p>Arquitectura modificada 2D</p><br><img src="../images/exoplanet/shallue_modificado2D.png" alt="Arquitectura del modelo" style="width:100%;border-radius:8px;background-color: white;"></article>
+        <article class="card"><p>Arquitectura con skiplayers propuesta</p><br><img src="../images/exoplanet/arquitectura.png" alt="Arquitectura del modelo" style="width:100%;border-radius:8px"></article>
+      </div>
+    </section>
     
     <section class="section">
       <h3>Notebook: Exoplanet detection</h3>
