--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
   <header class="site-header">
     <div class="container">
       <h1 class="brand">Contacto</h1>
-      <nav class="main-nav">
+      <nav class="main-nav" aria-label="Navegación principal">
         <a href="index.html">Inicio</a>
         <a href="about.html">Sobre mí</a>
         <a href="projects/index.html">Proyectos</a>
@@ -23,11 +23,34 @@
     <h2>Contacto</h2>
     <p>Enlaza aquí tu email o redes profesionales.</p>
     <ul>
-        <li>Email: <a href="mailto:madru4042@gmail.com">madru4042@gmail.com</a></li>
-        <li>GitHub: <a href="https://github.com/zmadru">github.com/zmadru</a></li>
         <li>LinkedIn: <a href="https://www.linkedin.com/in/diegomadrugaramos/">linkedin.com/in/diegomadrugaramos</a></li>
+        <li>GitHub: <a href="https://github.com/zmadru">github.com/zmadru</a></li>
+        <li>Email: <a href="mailto:madru4042@gmail.com">madru4042@gmail.com</a></li>
     </ul>
   </main>
+  <!-- Contact icons moved below main: centered row -->
+  <nav class="contact-bottom" aria-label="Redes de contacto">
+    <a href="https://www.linkedin.com/in/diegomadrugaramos/" target="_blank" rel="noopener" aria-label="LinkedIn">
+      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <rect x="2" y="2" width="20" height="20" rx="3" fill="none" stroke="rgba(255,255,255,0.06)"/>
+        <path d="M6.5 9.5H9V19H6.5V9.5ZM7.75 6.75C8.63 6.75 9.33 7.45 9.33 8.33C9.33 9.21 8.63 9.92 7.75 9.92C6.87 9.92 6.17 9.21 6.17 8.33C6.17 7.45 6.87 6.75 7.75 6.75Z" fill="currentColor"/>
+        <path d="M11 11.5H13.2V13.1C13.77 12.13 15.12 11 17 11C20 11 20.5 13.05 20.5 16.1V19H18V16.5C18 15.05 17.95 13.05 15 13.05C13.35 13.05 12.75 14.05 12.45 14.6V19H11V11.5Z" fill="currentColor"/>
+      </svg>
+    </a>
+
+    <a href="https://github.com/zmadru" target="_blank" rel="noopener" aria-label="GitHub">
+      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <path d="M12 2C7.03 2 3 6.03 3 11c0 4.08 2.62 7.53 6.25 8.75.46.08.63-.2.63-.45 0-.22-.01-.8-.01-1.57-2.54.55-3.08-1.1-3.08-1.1-.42-1.06-1.03-1.34-1.03-1.34-.84-.58.06-.57.06-.57.93.07 1.42.95 1.42.95.82 1.4 2.15.99 2.67.76.08-.59.32-.99.58-1.22-2.03-.23-4.17-1.02-4.17-4.54 0-1.01.36-1.83.95-2.48-.1-.23-.41-1.15.09-2.4 0 0 .77-.25 2.52.95A8.68 8.68 0 0112 6.8c.78.01 1.57.11 2.31.32 1.74-1.2 2.5-.95 2.5-.95.51 1.25.2 2.17.1 2.4.59.65.95 1.47.95 2.48 0 3.52-2.14 4.31-4.18 4.54.33.29.62.85.62 1.72 0 1.24-.01 2.24-.01 2.55 0 .25.17.54.64.45C18.38 18.53 21 15.08 21 11c0-4.97-4.03-9-9-9z" fill="currentColor"/>
+      </svg>
+    </a>
+
+    <a href="mailto:madru4042@gmail.com" aria-label="Enviar email">
+      <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+        <path d="M3 6.5A2.5 2.5 0 015.5 4h13A2.5 2.5 0 0121 6.5v11A2.5 2.5 0 0118.5 20h-13A2.5 2.5 0 013 17.5v-11z" stroke="rgba(255,255,255,0.06)" fill="none"/>
+        <path d="M4 7.5l8 6 8-6" stroke="currentColor" stroke-width="1.2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+    </a>
+  </nav>
   <footer class="site-footer"><div class="container"><p>&copy; 2025 Diego Madruga</p></div></footer>
   <script src="js/main.js"></script>
 </body>
