--- a/index.html
+++ b/index.html
@@ -39,17 +39,20 @@
 
     <section class="projects-preview">
       <h3>Proyectos destacados</h3>
+      <br>
       <div class="grid">
         <article class="card">
           <h4>Detección de exoplanetas</h4>
           <p>Investigación en técnicas de aprendizaje profundo para identificar exoplanetas a partir de datos astronómicos.</p>
           <p><a href="projects/Exoplanet-detection.html">Ver más</a></p>
+          <img src="images/exoplanet/transito.png" alt="Arquitectura del modelo" style="width:100%;border-radius:8px">
         </article>
 
         <article class="card">
           <h4>Algoritmo de detección de dinámicas del suelo (CCT)</h4>
           <p>Algoritmo basado en técnicas avanzadas para detectar cambios y dinámicas en la superficie terrestre utilizando datos satelitales.</p>
           <p ><a href="projects/CCT.html">Ver más</a></p>
+          <img src="images/cct/resultado2.png" alt="Resultado CCT" style="width:50%;height:auto;border-radius:8px;box-shadow:var(--shadow-elevation-2);margin-top:0.5rem;justify-content:center;display:block;margin-left:auto;margin-right:auto;">
         </article>
       </div>
     </section>
