Nuevos proyectos y componentes en la web

--- a/about.html
+++ b/about.html
@@ -13,21 +13,21 @@
       <h1 class="brand">Sobre mí</h1>
       <nav class="main-nav">
           <a href="index.html">Inicio</a>
-          <a href="about.html">Sobre mí</a>
           <a href="projects/index.html">Proyectos</a>
+          <a href="about.html">Sobre mí</a>
           <a href="contact.html">Contacto</a>
         </nav>
     </div>
   </header>
   <main class="container">
-    <div style="display:grid;grid-template-columns:260px 1fr;gap:1.25rem;align-items:start">
-      <aside class="card" style="padding:1rem">
+    <div style="display:grid;grid-template-columns:1fr;gap:1.25rem;align-items:start">
+      <aside class="card about-card" style="padding:1rem;width:100%">
         <div style="text-align:center">
           <div style="width:140px;height:140px;margin:0 auto;border-radius:999px;overflow:hidden;border:3px solid rgba(255,255,255,0.06)">
             <img src="images/foto_perfil.jpg" alt="Diego" style="width:100%;height:100%;object-fit:cover;display:block">
           </div>
           <h4 style="margin-top:0.75rem">Diego Madruga Ramos</h4>
-          <p class="muted">Ingeniero informático · Máster en Astrofísica</p>
+          <p class="muted" style="text-align: center;">Ingeniero informático · Máster en Astrofísica</p>
       
         </div>
         <br>
@@ -51,7 +51,7 @@
         </div>
       </aside>
       <div>
-        <h2>Sobre mí</h2>
+        <h2>Descripción</h2>
         <p>Soy ingeniero informático e investigador especializado en el desarrollo de algoritmos y modelos de inteligencia artificial aplicados al análisis de series temporales, imágenes satelitales y datos científicos. Mi trabajo combina la tecnología de teledetección con el aprendizaje profundo, explorando técnicas avanzadas de procesamiento de señal como las transformaciones wavelet y su integración en redes neuronales convolucionales (CNNs).</p>
 
         <p>A lo largo de mi trayectoria he participado en proyectos de investigación centrados en la automatización del análisis de datos astronómicos y geoespaciales, desarrollando soluciones capaces de optimizar la detección y caracterización de fenómenos naturales y astrofísicos. He trabajado en la implementación y optimización de modelos predictivos, la gestión de bases de datos científicas y el procesamiento eficiente de grandes volúmenes de información, empleando herramientas como Python, PyTorch, Scikit-learn, GDAL, Google Earth Engine y SQL.</p>
