--- a/projects/index.html
+++ b/projects/index.html
@@ -13,8 +13,8 @@
       <h1 class="brand">Proyectos</h1>
       <nav class="main-nav">
         <a href="../index.html">Inicio</a>
-        <a href="../about.html">Sobre mí</a>
         <a href="index.html">Proyectos</a>
+        <a href="../about.html">Sobre mí</a>
         <a href="../contact.html">Contacto</a>
       </nav>
     </div>
@@ -22,15 +22,15 @@
   <main class="container">
     <h2>Lista de proyectos</h2>
     <div class="grid">
-      <article class="card">
-        <h3><a href="Exoplanet-detection.html">Detección de exoplanetas</a></h3>
-        <p>Investigación realizada sobre la detección de exoplanetas utilizando técnicas avanzadas.</p>
-      </article>
+      <a class="card-link" href="Exoplanet-detection.html"><article class="card"><h3>Detección de exoplanetas</h3><p>Investigación realizada sobre la detección de exoplanetas utilizando técnicas avanzadas.</p></article></a>
 
-      <article class="card">
-        <h3><a href="CCT.html">Algoritmo de detección de dinámicas del suelo (CCT)</a></h3>
-        <p>Algoritmo basado en técnicas avanzadas para detectar cambios y dinámicas en la superficie terrestre utilizando datos satelitales.</p>
-      </article>
+      <a class="card-link" href="CCT.html"><article class="card"><h3>Algoritmo de detección de dinámicas del suelo (CCT)</h3><p>Algoritmo basado en técnicas avanzadas para detectar cambios y dinámicas en la superficie terrestre utilizando datos satelitales.</p></article></a>
+      
+      <a class="card-link" href="ESA2025-prediction.html"><article class="card"><h3>ESA 2025 — Prediction (poster)</h3><p>Póster presentado en ESA 2025 sobre técnicas de predicción aplicadas a series temporales.</p></article></a>
+
+      <a class="card-link" href="ESA2025-RF.html"><article class="card"><h3>ESA 2025 — Random Forest (poster)</h3><p>Póster presentado en ESA 2025 mostrando un enfoque con Random Forest para clasificación y estimación.</p></article></a>
+      
+      <a class="card-link" href="FEGA.html"><article class="card"><h3>Proyecto FEGA — Aplicación y resultados</h3><p>Proyecto FEGA: aplicación de detección y visualización con documentación y posters disponibles.</p></article></a>
     </div>
   </main>
   <footer class="site-footer"><div class="container"><p>&copy; 2025 Diego Madruga</p></div></footer>
