nuevo proyecto y cambios visuales

--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Contacto — Diego Madruga</title>
+  <link rel="icon" type="image/png" href="images/foto_perfil.jpg">
+  <link rel="shortcut icon" href="images/foto_perfil.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
 </head>
