--- a/projects/ESA2025-RF.html
+++ b/projects/ESA2025-RF.html
@@ -6,6 +6,8 @@
   <title>ESA2025 — Random Forest Poster</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" type="image/png" href="../images/foto_perfil.jpg">
+  <link rel="shortcut icon" href="../images/foto_perfil.jpg">
 </head>
 <body>
   <header class="site-header">
