--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Portfolio — Diego Madruga</title>
+  <link rel="icon" type="image/png" href="images/foto_perfil.jpg">
+  <link rel="shortcut icon" href="images/foto_perfil.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <meta name="description" content="Portfolio de proyectos de programación de Diego Madruga.">
@@ -78,6 +80,13 @@
             <h4>Algoritmo de detección de dinámicas del suelo (CCT)</h4>
             <p>Algoritmo basado en técnicas avanzadas para detectar cambios y dinámicas en la superficie terrestre utilizando datos satelitales.</p>
             <img src="images/cct/resultado2.png" alt="Resultado CCT" style="width:50%;height:auto;border-radius:8px;box-shadow:var(--shadow-elevation-2);margin-top:0.5rem;justify-content:center;display:block;margin-left:auto;margin-right:auto;">
+          </article>
+        </a>
+        
+        <a class="card-link" href="projects/Infolandyn.html">
+          <article class="card">
+            <h4>Infolandyn — Visualización geoespacial</h4>
+            <p>Visualizaciones interactivas creadas con Google Earth Engine. <a href="https://www.infolandyn.es/" target="_blank" rel="noopener">infolandyn.es</a></p>
           </article>
         </a>
       </div>
