--- a/projects/CCT.html
+++ b/projects/CCT.html
@@ -6,6 +6,8 @@
   <title>CCT — Diego Madruga</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="icon" type="image/png" href="../images/foto_perfil.jpg">
+  <link rel="shortcut icon" href="../images/foto_perfil.jpg">
   <!-- Highlight.js for syntax highlighting of Python code -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/highlight.min.js"></script>
