--- a/about.html
+++ b/about.html
@@ -8,8 +8,9 @@
   <link rel="shortcut icon" href="images/foto_perfil.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/stars.css">
 </head>
-<body>
+<body class="stars-bg">
   <header class="site-header">
     <div class="container">
       <h1 class="brand">Sobre mí</h1>
@@ -65,5 +66,6 @@
   </main>
   <footer class="site-footer"><div class="container"><p>&copy; 2025 Diego Madruga</p></div></footer>
   <script src="js/main.js"></script>
+  <script src="js/stars.js"></script>
 </body>
 </html>
