--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <link rel="shortcut icon" href="images/foto_perfil.jpg">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/stars.css">
   <meta name="description" content="Portfolio de proyectos de programación de Diego Madruga.">
 </head>
-<body>
+<body class="stars-bg">
   <header class="site-header">
     <div class="container">
       <h1 class="brand">Diego Madruga</h1>
@@ -93,6 +94,9 @@
     </div>
   </footer>
 
+  <!-- Scripts principales -->
   <script src="js/main.js"></script>
+  <!-- Script para el fondo animado -->
+  <script src="js/stars.js"></script>
 </body>
 </html>
